# gaze-tracker

./: LICENSE  README.md  install.cmd  pyproject.toml
gaze_tracker/: gaze_tracker.py  heatmap.py  trajectory.py
